--- a/menta_tornado/templates/index.html
+++ b/menta_tornado/templates/index.html
@@ -28,7 +28,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				{% for task in tasks %}
+				{% for task in taskss %}
 					<tr>
 						<td>{{ task["id"] }}</td>
 						<td>{{ task["title"] }}</td>
